--- a/custom_users/templates/custom_users/login_form.html
+++ b/custom_users/templates/custom_users/login_form.html
@@ -3,7 +3,7 @@
     <form action = "{% url 'login' %}" method = "post">
         {% csrf_token %}
         {{ form }}
-        <input type="submit" value="Submit" />
+        <input type="submit" value="Log in" />
     </form>
 
 {% endblock %}
