--- a/custom_users/templates/custom_users/organisation_registration_form.html
+++ b/custom_users/templates/custom_users/organisation_registration_form.html
@@ -1,45 +1,75 @@
 {% extends "base/base.html" %}
 {% load static %}
 {% block extra_head %}
-    <link rel="stylesheet" href="{% static 'dbwwinkel/css/form.css' %} ">
 {% endblock %}
 
 {% block content %}
-    <form action = "{% url 'register_organisation' %}" method = "post">
-    {% csrf_token %}
-    <div class ="container">
-        <div class = "row">
-            <h2> Informatie Organisatie</h2>
-            {% for field in organisation_form %}
-                <div class ="form-group">
-                    {{ field.label_tag }}<br/>
-                    {{ field }}
+    <div class='container'>
+        <form action="{% url 'register_organisation' %}" method="post">
+            {% csrf_token %}
+            <div class='panel panel-info'>
+                <div class='panel panel-heading'>
+                    <h1>Registreer uw organisatie</h1>
                 </div>
-        {% endfor %}
-        </div>
-        <div class ="row">
-            <h2> Adres Organisatie</h2>
-            {% for address_field in address_form %}
-                <div class ="form-group">
-                    {{ address_field.label_tag }}<br/>
-                    {{ address_field }}
-                </div>
-            {% endfor %}
-        </div>
-        <div class ="row">
-            <h2>Gebruikers Informatie</h2>
-            {% for field in user_form %}
-                <div class ="form-group">
-                {{ field.label_tag }}<br/>
-                {{ field }}
-                </div>
-            {% endfor %}
-        </div>
-        <div class ="row">
-            <button type="submit" class="btn btn-default" value = "Registreer">Registreer</button>
-        </div>
+                <div class='panel panel-body'>
+                    <div class='row'>
+                        <h3> Informatie Organisatie</h3>
+                    </div>
+                    <div class="col-md-6">
+                        <div class='form-group row{% if organisation_form.name.errors %} has-error{% endif %}'>
+                            {% if organisation_form.name.errors %}
+                                <label class="control-label"
+                                       for="id_organisation-name">{{ organisation_form.name.errors }}</label>
+                                <span class="glyphicon glyphicon-remove form-control-feedback"
+                                      aria-hidden="true"></span>
+                            {% endif %}
+                            <div class="col-md-4">
+                                {{ organisation_form.name.label_tag }}
+                            </div>
+                            <div class="col-md-6">
+                                {{ organisation_form.name }}
+                            </div>
+                        </div>
 
+
+
+                        <div class='form-group row{% if organisation_form.legal_entity.errors %} has-error{% endif %}'>
+                            {% if organisation_form.legal_entity.errors %}
+                                <label class="control-label" for="id_legal_entity">organisation_form.name.errors</label>
+                                <span class="glyphicon glyphicon-remove form-control-feedback"
+                                      aria-hidden="true"></span>
+                            {% endif %}
+                            <div class="col-md-4">
+                                {{ organisation_form.legal_entity.label_tag }}
+                            </div>
+                            <div class="col-md-6">
+                                {{ organisation_form.legal_entity }}
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class = 'col-md-6'>
+                        <div class='form-group row{% if organisation_form.recognised_abbreviation.errors %} has-error{% endif %}'>
+                            {% if organisation_form.recognised_abbreviation.errors %}
+                                <label class="control-label" for="id_recognised_abbreviation">organisation_form.name.errors</label>
+                                <span class="glyphicon glyphicon-remove form-control-feedback"
+                                      aria-hidden="true"></span>
+                            {% endif %}
+                            <div class="col-md-4">
+                                {{ organisation_form.recognised_abbreviation.label_tag }}
+                            </div>
+                            <div class="col-md-3">
+                                {{ organisation_form.recognised_abbreviation }}
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <input type="submit" class="btn btn-info" value='Registreer'>
+                </div>
+
+            </div>
+
+        </form>
     </div>
-
-    </form>
 {% endblock %}
