--- a/dbwwinkel/templates/dbwwinkel/vraagstelform.html
+++ b/dbwwinkel/templates/dbwwinkel/vraagstelform.html
@@ -1,42 +1,39 @@
 {% extends "base/base.html" %}
 {% load static %}
 
-{% block extra_head %}
-        <link rel="stylesheet" href="{% static 'dbwwinkel/css/form.css' %} ">
-{% endblock %}
 
 {% block content %}
-    <div class = "container-fluid">
-        <div class = "row">
-            <div class = col-xs-12>
-
-                <form action="{{ request.get_full_path }} {% if from %}?next ={{ from }}{% endif %}" method="post" class = "form-horizontal">
+    <div class="container">
+        <div class='panel panel-info'>
+            <div class='panel-heading'>Vraag registratie</div>
+            <div class='panel panel-body'>
+                <form action="{{ request.get_full_path }} {% if from %}?next ={{ from }}{% endif %}" method="post"
+                      class="form-horizontal">
                     {% csrf_token %}
-                    <div class = "container">
-                    <div class = "row">
-                    {% for field in form %}
-                     <div class="col-md-10">
-                        <div class="form-group">
-                            {{ field.label_tag }}<br>
-                             {% for error in field.errors %}
-                               <div class="alert alert-danger">
-                                    <strong>Error: </strong>{{ error }}
+                    <div class='col-md-12'>
+                        {% for field in form %}
+                            <div class="form-group row">
+                                {% for error in field.errors %}
+                                    <div class="alert alert-danger">
+                                        <strong>Error: </strong>{{ error }}
+                                    </div>
+                                {% endfor %}
+                                <div class="col-md-4">
+                                    {{ field.label_tag }}
                                 </div>
-                            {% endfor %}
-                            {{ field }}
-                            {% if field.help_text %}
-                            <p class="help">{{ field.help_text|safe }}</p>
-                            {% endif %}
+                                <div class="col-md-8">
+                                    {{ field }}
+                                </div>
+                            </div>
+                        {% endfor %}
+
+                    </div>
+                    <div class="container ">
+                        <div class="row form-group">
+                            <button type="submit" class="btn btn-info">Registreer vraag</button>
                         </div>
                     </div>
-                    {% endfor %}
-                    </div>
-                    </div>
-                <div class = "container ">
-                    <div class = "row form-group">
-                       <button type="submit" class ="btn" >Registreer vraag </button>
-                    </div>
-                    </div>
+
                 </form>
             </div>
         </div>
