Question flow reworked

--- a/dbwwinkel/templates/dbwwinkel/question_list.html
+++ b/dbwwinkel/templates/dbwwinkel/question_list.html
@@ -18,7 +18,8 @@
                             <form name="form" action="{% url "list_questions" %}" method='GET' accept-charset="utf-8"
                                   id="form">
                                 <strong>Gezocht op: {{ search_text }}</strong>
-                                <input type="hidden" name="search_text" value="{{ search_text }}">
+                                <input type="hidden" name="search_query" value="{{ questions }}">
+                                <input type="hidden" name="search_text" value = {{ search_text }}>
                                 {% include 'dbwwinkel/Options_question_list/options_students.html' %}
                             </form>
                         </ul>
