--- a/dbwwinkel/templates/dbwwinkel/admin_options.html
+++ b/dbwwinkel/templates/dbwwinkel/admin_options.html
@@ -42,18 +42,17 @@
         <h3>Organisaties</h3>
         <ul class="nav nav-tabs nav-stacked">
             <li><a href={% url 'admin_organisations' %}>Organisaties</a></li>
-            <li><a href='#'>Contactpersonen</a></li>
+            <li><a href={% url 'admin_contacts' %}>Contactpersonen</a></li>
         </ul>
     </div>
 
     <div class='span2 sidebar'>
         <h3>Onderwijs</h3>
         <ul class="nav nav-tabs nav-stacked">
-            <li><a href='#'>Instellingen</a></li>
-            <li><a href='#'>Faculteiten</a></li>
-            <li><a href="#">Opleidingen</a></li>
-            <li><a href="#">Vakgroep</a></li>
-            <li><a href="#">Promotor</a></li>
+            <li><a href='{% url 'admin_institutions' %}'>Instellingen</a></li>
+            <li><a href='{% url 'admin_faculty' %}'>Faculteiten</a></li>
+            <li><a href="{% url 'admin_education' %}">Opleidingen</a></li>
+            <li><a href="{% url 'admin_promotor' %}">Promotor</a></li>
         </ul>
     </div>
 </div>
