--- a/dbwwinkel/templates/dbwwinkel/contact_detail.html
+++ b/dbwwinkel/templates/dbwwinkel/contact_detail.html
@@ -15,14 +15,14 @@
             <div class="container">
                 <div class="panel panel-info">
                     <div class='panel-heading'>
-                        <h2><strong>Persoon: </strong>{{ organisationuser }}</h2><br>
+                        <h2><strong>Persoon: </strong>{{ organisationuser.first_name }} {{ " " }} {{ organisationuser.last_name }}</h2><br>
                     </div>
                     <div class="panel panel-body">
                         <div class=col-md-4>
                             <h3>Contact gegevens</h3>
                             <strong>Straat: </strong> {{ organisationuser.organisation.address.street_name }}<br>
                             <strong>Nummer: </strong> {{ organisationuser.organisation.address.street_number }}<br>
-                            <strong>Plaats: </strong> {{ organisationuser.organisation.address.postal_code }} {{ organisationuser.address.city }}<br>
+                            <strong>Plaats: </strong> {{ organisationuser.organisation.address.postal_code }} {{ organisationuser.organisation.address.city }}<br>
                             <strong>Werkgever: </strong>{{ organisationuser.organisation }}<br>
                         </div>
                     </div>
